tests/snapshots/snapshots__budget_mdbook_guide_src_format_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2008 words)

README.md
     1→# Format
     2→
      →…
configuration/README.md
     1→# Configuration
     2→
     3→This section details the configuration options available in the ***book.toml***:
      →…
configuration/environment-variables.md
     1→# Environment variables
     2→
     3→All configuration values can be overridden from the command line by setting the
      →…
configuration/general.md
     1→# General configuration
     2→
     3→You can configure the parameters for your book in the ***book.toml*** file.
      →…
    31→## Supported configuration options
    32→
    33→It is important to note that **any** relative path specified in the
      →…
    37→### General metadata
    38→
    39→This is general information about your book.
      →…
    64→### Rust options
    65→
    66→Options for the Rust language, relevant to running tests and playground
      →…
    85→### Build options
    86→
    87→This controls the build process of your book.
      →…
configuration/preprocessors.md
     1→# Configuring Preprocessors
     2→
     3→Preprocessors are extensions that can modify the raw Markdown source before it gets sent to the renderer.
      →…
    26→## Custom preprocessor configuration
    27→
    28→Preprocessors can be added by including a `preprocessor` table in `book.toml` with the name of the preprocessor.
      →…
    45→## Locking a preprocessor dependency to a renderer
    46→
    47→You can explicitly specify that a preprocessor should run for a renderer by
      →…
    55→## Provide your own command
    56→
    57→By default when you add a `[preprocessor.foo]` table to your `book.toml` file,
      →…
    67→### Optional preprocessors
    68→
    69→If you enable a preprocessor that isn't installed, the default behavior is to throw an error.
      →…
    79→## Require a certain order
    80→
    81→The order in which preprocessors are run can be controlled with the `before` and `after` fields.
      →…
configuration/renderers.md
     1→# Configuring Renderers
     2→
     3→Renderers (also called "backends") are responsible for creating the output of the book.
      →…
    20→## Output tables
    21→
    22→Backends can be added by including a `output` table in `book.toml` with the name of the backend.
      →…
    59→### Custom backend commands
    60→
    61→By default when you add an `[output.foo]` table to your `book.toml` file,
      →…
    71→### Optional backends
    72→
    73→If you enable a backend that isn't installed, the default behavior is to throw an error.
      →…
    84→## HTML renderer options
    85→
    86→The HTML renderer has a variety of options detailed below.
      →…
   176→### `[output.html.print]`
   177→
   178→The `[output.html.print]` table provides options for controlling the printable output.
      →…
   191→### `[output.html.fold]`
   192→
   193→The `[output.html.fold]` table provides options for controlling folding of the chapter listing in the navigation sidebar.
      →…
   206→### `[output.html.playground]`
   207→
   208→The `[output.html.playground]` table provides options for controlling Rust sample code blocks, and their integration with the [Rust Playground].
      →…
   230→### `[output.html.code]`
   231→
   232→The `[output.html.code]` table provides options for controlling code blocks.
      →…
   244→### `[output.html.search]`
   245→
   246→The `[output.html.search]` table provides options for controlling the built-in text [search].
      →…
   286→#### `[output.html.search.chapter]`
   287→
   288→The [`output.html.search.chapter`] table provides the ability to modify search settings per chapter or directory. Each key is the path to the chapter source file or directory, and the value is a table of settings to apply to that path. This will merge recursively, with more specific paths taking precedence.
      →…
   300→### `[output.html.redirect]`
   301→
   302→The `[output.html.redirect]` table provides a way to add redirects.
      →…
   325→## Markdown renderer
   326→
   327→The Markdown renderer will run preprocessors and then output the resulting
      →…
example.rs
     1→fn main() {
     2→    println!("Hello World!");
     3→#
     4→#     // You can even hide lines! :D
     5→#     println!("I am hidden! Expand the code snippet to see me");
     6→}
markdown.md
     1→# Markdown
     2→
      →…
     9→## Text and paragraphs
    10→
      →…
    25→## Headings
    26→
      →…
    39→### A heading 
    40→
      →…
    43→#### A smaller heading 
    44→
      →…
    47→## Lists
    48→
      →…
    69→## Links
    70→
      →…
   108→## Images
   109→
      →…
   127→## Extensions
   128→
      →…
   131→### Strikethrough
   132→
      →…
   146→### Footnotes
   147→
      →…
   171→### Tables
   172→
      →…
   191→### Task lists
   192→
      →…
   208→### Smart punctuation
   209→
      →…
   231→### Heading attributes
   232→
      →…
   244→### Definition lists
   245→
      →…
   279→### Admonitions
   280→
      →…
mathjax.md
     1→# MathJax support
     2→
      →…
    24→### Inline equations
    25→Inline equations are delimited by `\\(` and `\\)`. So for example, to render the
      →…
    32→### Block equations
    33→Block equations are delimited by `\\[` and `\\]`. To render the following
      →…
mdbook.md
     1→# mdBook-specific features
     2→
     3→## Hiding code lines
     4→
     5→There is a feature in mdBook that lets you hide code lines by prepending them with a specific prefix.
     6→
     7→For the Rust language, you can prefix lines with `# ` (`#` followed by a space) to hide them [like you would with Rustdoc][rustdoc-hide].
     8→This prefix can be escaped with `##` to prevent the hiding of a line that should begin with the literal string `# ` (see [Rustdoc's docs][rustdoc-hide] for more details)
     9→
    10→[rustdoc-hide]: https://doc.rust-lang.org/stable/rustdoc/write-documentation/documentation-tests.html#hiding-portions-of-the-example
    11→
    12→```bash
    13→# fn main() {
    14→    let x = 5;
    15→    let y = 6;
    16→
    17→    println!("{}", x + y);
    18→# }
    19→```
    20→
    21→Will render as
    22→
    23→```rust
    24→# fn main() {
    25→    let x = 5;
    26→    let y = 6;
    27→
    28→    println!("{}", x + y);
    29→# }
    30→```
    31→
    32→When you tap or hover the mouse over the code block, there will be an eyeball icon (<i class="fa fa-eye"></i>) which will toggle the visibility of the hidden lines.
    33→
    34→By default, this only works for code examples that are annotated with `rust`.
    35→However, you can define custom prefixes for other languages by adding a new line-hiding prefix in your `book.toml` with the language name and prefix character(s):
    36→
    37→```toml
    38→[output.html.code.hidelines]
    39→python = "~"
    40→```
    41→
    42→The prefix will hide any lines that begin with the given prefix. With the python prefix shown above, this:
    43→
    44→```bash
    45→~hidden()
    46→nothidden():
    47→~    hidden()
    48→    ~hidden()
    49→    nothidden()
    50→```
    51→
    52→will render as
    53→
    54→```python
    55→~hidden()
    56→nothidden():
    57→~    hidden()
    58→    ~hidden()
    59→    nothidden()
    60→```
    61→
    62→This behavior can be overridden locally with a different prefix. This has the same effect as above:
    63→
    64→~~~markdown
    65→```python,hidelines=!!!
    66→!!!hidden()
    67→nothidden():
    68→!!!    hidden()
    69→    !!!hidden()
    70→    nothidden()
    71→```
    72→~~~
    73→
    74→## Rust playground
    75→
      →…
   102→## Rust code block attributes
   103→
      →…
   133→## Including files
   134→
      →…
   154→## Including portions of a file
   155→Often you only need a specific part of the file, e.g. relevant lines for an
      →…
   215→## Including a file but initially hiding all except specified lines
   216→
      →…
   279→## Inserting runnable Rust files
   280→
      →…
   310→## Controlling page \<title\>
   311→
      →…
   319→## HTML classes provided by mdBook
   320→
      →…
   323→### `class="left"` and `"right"`
   324→
      →…
   331→### `class="hidden"`
   332→
      →…
   341→## Font-Awesome icons
   342→
      →…
summary.md
     1→# SUMMARY.md
     2→
      →…
    12→### Structure
    13→
      →…
    93→### Example
    94→
      →…
theme/README.md
     1→# Theme
     2→
     3→The default renderer uses a [handlebars](https://handlebarsjs.com) template to
     4→render your markdown files and comes with a default theme included in the mdBook
     5→binary.
     6→
     7→The theme is totally customizable, you can selectively replace every file from
     8→the theme by your own by adding a `theme` directory next to `src` folder in your
     9→project root. Create a new file with the name of the file you want to override
    10→and now that file will be used instead of the default file.
    11→
    12→Here are the files you can override:
    13→
    14→- **_index.hbs_** is the handlebars template.
    15→- **_head.hbs_** is appended to the HTML `<head>` section.
    16→- **_header.hbs_** content is appended on top of every book page.
    17→- **_css/_** contains the CSS files for styling the book.
    18→    - **_css/chrome.css_** is for UI elements.
    19→    - **_css/general.css_** is the base styles.
      →…
theme/editor.md
     1→# Editor
     2→
     3→In addition to providing runnable code playgrounds, mdBook optionally allows them
     4→to be editable. In order to enable editable code blocks, the following needs to
     5→be added to the ***book.toml***:
     6→
     7→```toml
     8→[output.html.playground]
     9→editable = true
    10→```
    11→
    12→After enabling editable code blocks, the `editable` attribute must be added to a
    13→code block to make it editable:
    14→
    15→~~~markdown
    16→```rust,editable
    17→fn main() {
    18→    let number = 5;
    19→    print!("{}", number);
      →…
    35→## Customizing the editor
    36→
    37→By default, the editor is the [Ace](https://ace.c9.io/) editor, but, if desired,
    38→the functionality may be overridden by providing a different folder:
    39→
    40→```toml
    41→[output.html.playground]
    42→editable = true
    43→editor = "/path/to/editor"
    44→```
    45→
    46→Note that for the editor changes to function correctly, the `book.js` inside of
    47→the `theme` folder will need to be overridden as it has some couplings with the
    48→default Ace editor.
theme/index-hbs.md
     1→# index.hbs
     2→
     3→`index.hbs` is the handlebars template that is used to render the book. The
     4→markdown files are processed to html and then injected in that template.
     5→
     6→If you want to change the layout or style of your book, chances are that you
     7→will have to modify this template a little bit. Here is what you need to know.
     8→
     9→## Data
    10→
    11→A lot of data is exposed to the handlebars template with the "context". In the
    12→handlebars template you can access this information by using
    13→
    14→```handlebars
    15→{{name_of_property}}
    16→```
    17→
    18→Here is a list of the properties that are exposed:
    19→
    20→- ***language*** Language of the book in the form `en`, as specified in `book.toml` (if not specified, defaults to `en`). To use in <code
    21→  class="language-html">\<html lang=\"{{ language }}\"></code> for example.
    22→- ***title*** Title used for the current page. This is identical to `{{ chapter_title }} - {{ book_title }}` unless `book_title` is not set in which case it just defaults to the `chapter_title`.
    23→- ***book_title*** Title of the book, as specified in `book.toml`
    24→- ***chapter_title*** Title of the current chapter, as listed in `SUMMARY.md`
    25→
    26→- ***path*** Relative path to the original markdown file from the source
    27→  directory
      →…
    41→## Handlebars helpers
    42→
    43→In addition to the properties you can access, there are some handlebars helpers
    44→at your disposal.
    45→
    46→### toc
    47→
    48→The toc helper is used like this
    49→
    50→```handlebars
    51→{{#toc}}{{/toc}}
    52→```
    53→
    54→and outputs something that looks like this, depending on the structure of your
    55→book
    56→
    57→```html
    58→<ul class="chapter">
    59→    <li><a href="link/to/file.html">Some chapter</a></li>
    60→    <li>
    61→        <ul class="section">
    62→            <li><a href="link/to/other_file.html">Some other Chapter</a></li>
    63→        </ul>
    64→    </li>
      →…
    80→### resource
    81→
    82→The path to a static file.
    83→It implicitly includes `path_to_root`,
    84→and accounts for files that are renamed with a hash in their filename.
    85→
    86→```handlebars
    87→<link rel="stylesheet" href="{{ resource "css/chrome.css" }}">
    88→```
    89→
    90→### fa
    91→
    92→mdBook includes a copy of [Font Awesome Free's](https://fontawesome.com)
    93→MIT-licensed SVG files. It accepts three positional arguments:
    94→
    95→1. Type: one of "solid", "regular", and "brands" (light and duotone are not
    96→   currently supported)
    97→2. Icon: anything chosen from the
    98→   [free icon set](https://fontawesome.com/v6/search)
    99→3. ID (optional): if included, an HTML ID attribute will be added to the
   100→   icon's wrapping `<span>` tag
   101→
   102→For example, this handlebars syntax will become this HTML:
   103→
   104→```handlebars
   105→{{fa "solid" "print" "print-button"}}
   106→```
   107→
   108→```html
      →…
theme/syntax-highlighting.md
     1→# Syntax highlighting
     2→
     3→mdBook uses [Highlight.js](https://highlightjs.org) with a custom theme
     4→for syntax highlighting.
     5→
     6→Automatic language detection has been turned off, so you will probably want to
     7→specify the programming language you use like this:
     8→
     9→~~~markdown
    10→```rust
    11→fn main() {
    12→    // Some code
    13→}
    14→```
    15→~~~
    16→
    17→## Supported languages
    18→
    19→These languages are supported by default, but you can add more by supplying
    20→your own `highlight.js` file:
    21→
    22→- apache
    23→- armasm
    24→- bash
    25→- c
    26→- coffeescript
    27→- cpp
    28→- csharp
    29→- css
    30→- d
    31→- diff
    32→- go
    33→- handlebars
    34→- haskell
    35→- http
      →…
    68→## Custom theme
    69→Like the rest of the theme, the files used for syntax highlighting can be
    70→overridden with your own.
    71→
    72→- ***highlight.js*** normally you shouldn't have to overwrite this file, unless
    73→  you want to use a more recent version.
    74→- ***highlight.css*** theme used by highlight.js for syntax highlighting.
    75→
    76→If you want to use another theme for `highlight.js` download it from their
    77→website, or make it yourself, rename it to `highlight.css` and put it in
    78→the `theme` folder of your book.
    79→
    80→Now your theme will be used instead of the default theme.
    81→
    82→## Improve default theme
    83→
    84→If you think the default theme doesn't look quite right for a specific language,
    85→or could be improved, feel free to [submit a new
    86→issue](https://github.com/rust-lang/mdBook/issues) explaining what you
    87→have in mind and I will take a look at it.
    88→
    89→You could also create a pull-request with the proposed improvements.
    90→
    91→Overall the theme should be light and sober, without too many flashy colors.
