tests/snapshots/snapshots__budget_mdbook_guide_src_format_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4064 tokens)

README.md
     1→# Format
     3→In this section you will learn how to:
     4→
     5→- Structure your book correctly
     6→- Format your `SUMMARY.md` file
     7→- Configure your book using `book.toml`
     8→- Customize your theme

configuration/README.md
     1→# Configuration
     3→This section details the configuration options available in the ***book.toml***:
     4→- **[General]** configuration including the `book`, `rust`, `build` sections
     5→- **[Preprocessor]** configuration for default and custom book preprocessors
     6→- **[Renderer]** configuration for the HTML, Markdown and custom renderers
     7→- **[Environment Variable]** configuration for overriding configuration options in your environment
     8→
     9→[General]: general.md
    10→[Preprocessor]: preprocessors.md
    11→[Renderer]: renderers.md
    12→[Environment Variable]: environment-variables.md

configuration/environment-variables.md
     1→# Environment variables
     3→All configuration values can be overridden from the command line by setting the
     4→corresponding environment variable. Because many operating systems restrict
     5→environment variables to be alphanumeric characters or `_`, the configuration
     6→key needs to be formatted slightly differently to the normal `foo.bar.baz` form.
     7→
     8→Variables starting with `MDBOOK_` are used for configuration. The key is created
     9→by removing the `MDBOOK_` prefix and turning the resulting string into
    10→`kebab-case`. Double underscores (`__`) separate nested keys, while a single
    11→underscore (`_`) is replaced with a dash (`-`).
    12→
    13→For example:
    14→
      →…

configuration/general.md
     1→# General configuration
     3→You can configure the parameters for your book in the ***book.toml*** file.
     4→
     5→Here is an example of what a ***book.toml*** file might look like:
     6→
     7→```toml
     8→[book]
     9→title = "Example book"
    10→authors = ["John Doe"]
    11→description = "The example book covers examples."
    12→
    13→[rust]
    14→edition = "2018"
    15→
    16→[build]
    17→build-dir = "my-example-book"
    18→create-missing = false
    19→
    20→[preprocessor.index]
    21→
    22→[preprocessor.links]
    23→
    24→[output.html]
      →…
    31→## Supported configuration options
    33→It is important to note that **any** relative path specified in the
    34→configuration will always be taken relative from the root of the book where the
    35→configuration file is located.
    36→
    37→### General metadata
    39→This is general information about your book.
    40→
    41→- **title:** The title of the book
      →…
    64→### Rust options
    66→Options for the Rust language, relevant to running tests and playground
    67→integration.
    68→
      →…
    85→### Build options
    87→This controls the build process of your book.
    88→
    89→```toml
      →…

configuration/preprocessors.md
     1→# Configuring Preprocessors
     3→Preprocessors are extensions that can modify the raw Markdown source before it gets sent to the renderer.
     4→
     5→The following preprocessors are built-in and included by default:
     6→
     7→- `links`: Expands the `{{ #playground }}`, `{{ #include }}`, and `{{ #rustdoc_include }}` handlebars
     8→  helpers in a chapter to include the contents of a file.
     9→  See [Including files] for more.
    10→- `index`: Convert all chapter files named `README.md` into `index.md`. That is
    11→  to say, all `README.md` would be rendered to an index file `index.html` in the
    12→  rendered book.
    13→
      →…
    26→## Custom preprocessor configuration
    28→Preprocessors can be added by including a `preprocessor` table in `book.toml` with the name of the preprocessor.
      →…
    45→## Locking a preprocessor dependency to a renderer
    47→You can explicitly specify that a preprocessor should run for a renderer by
      →…
    55→## Provide your own command
    57→By default when you add a `[preprocessor.foo]` table to your `book.toml` file,
      →…
    67→### Optional preprocessors
    69→If you enable a preprocessor that isn't installed, the default behavior is to throw an error.
    70→This behavior can be changed by marking the preprocessor as optional:
    71→
    72→```toml
    73→[preprocessor.example]
    74→optional = true
    75→```
    76→
    77→This demotes the error to a warning.
    78→
    79→## Require a certain order
    81→The order in which preprocessors are run can be controlled with the `before` and `after` fields.
      →…

configuration/renderers.md
     1→# Configuring Renderers
     3→Renderers (also called "backends") are responsible for creating the output of the book.
     4→
     5→The following backends are built-in:
     6→
     7→* [`html`](#html-renderer-options) --- This renders the book to HTML.
     8→  This is enabled by default if no other `[output]` tables are defined in `book.toml`.
     9→* [`markdown`](#markdown-renderer) --- This outputs the book as markdown after running the preprocessors.
    10→  This is useful for debugging preprocessors.
    11→
    12→The community has developed several backends.
    13→See the [Third Party Plugins] wiki page for a list of available backends.
    14→
      →…
    20→## Output tables
    22→Backends can be added by including a `output` table in `book.toml` with the name of the backend.
      →…
    59→### Custom backend commands
    71→### Optional backends
    84→## HTML renderer options
    86→The HTML renderer has a variety of options detailed below.
      →…
   176→### `[output.html.print]`
   191→### `[output.html.fold]`
   206→### `[output.html.playground]`
   230→### `[output.html.code]`
   244→### `[output.html.search]`
   286→#### `[output.html.search.chapter]`
   288→The [`output.html.search.chapter`] table provides the ability to modify search settings per chapter or directory. Each key is the path to the chapter source file or directory, and the value is a table of settings to apply to that path. This will merge recursively, with more specific paths taking precedence.
   289→
   290→```toml
   291→[output.html.search.chapter]
      →…
   300→### `[output.html.redirect]`
   325→## Markdown renderer
   327→The Markdown renderer will run preprocessors and then output the resulting
      →…

example.rs
     1→fn main() {
     2→    println!("Hello World!");
     3→#
      →…

markdown.md
     1→# Markdown
     3→mdBook's [parser](https://github.com/raphlinus/pulldown-cmark) adheres to the [CommonMark](https://commonmark.org/) specification with some extensions described below.
     4→You can take a quick [tutorial](https://commonmark.org/help/tutorial/),
     5→or [try out](https://spec.commonmark.org/dingus/) CommonMark in real time. A complete Markdown overview is out of scope for 
     6→this documentation, but below is a high level overview of some of the basics. For a more in-depth experience, check out the
     7→[Markdown Guide](https://www.markdownguide.org).
     8→
     9→## Text and paragraphs
    25→## Headings
    39→### A heading 
    43→#### A smaller heading 
    45→More text.
    46→
    47→## Lists
    69→## Links
   108→## Images
   127→## Extensions
   131→### Strikethrough
   146→### Footnotes
   171→### Tables
   191→### Task lists
   208→### Smart punctuation
   231→### Heading attributes
   244→### Definition lists
   279→### Admonitions

mathjax.md
     1→# MathJax support
     3→mdBook has optional support for math equations through
     4→[MathJax](https://www.mathjax.org/).
     5→
     6→To enable MathJax, you need to add the `mathjax-support` key to your `book.toml`
     7→under the `output.html` section.
     8→
     9→```toml
    10→[output.html]
    11→mathjax-support = true
    12→```
    13→
      →…
    24→### Inline equations
    25→Inline equations are delimited by `\\(` and `\\)`. So for example, to render the
    26→following inline equation \\( \int x dx = \frac{x^2}{2} + C \\) you would write
    27→the following:
      →…
    32→### Block equations
    33→Block equations are delimited by `\\[` and `\\]`. To render the following
    34→equation
    35→
      →…

mdbook.md
     1→# mdBook-specific features
     3→## Hiding code lines
    74→## Rust playground
   102→## Rust code block attributes
   133→## Including files
   154→## Including portions of a file
   215→## Including a file but initially hiding all except specified lines
   279→## Inserting runnable Rust files
   310→## Controlling page \<title\>
   319→## HTML classes provided by mdBook
   323→### `class="left"` and `"right"`
   325→These classes are provided by default, for inline HTML to float images.
   326→
   327→```html
      →…
   331→### `class="hidden"`
   333→HTML tags with class `hidden` will not be shown.
   334→
   335→```html
      →…
   341→## Font-Awesome icons

summary.md
     1→# SUMMARY.md
     3→The summary file is used by mdBook to know what chapters to include, in what
     4→order they should appear, what their hierarchy is and where the source files
     5→are. Without this file, there is no book.
     6→
     7→This markdown file must be named `SUMMARY.md`. Its formatting
     8→is very strict and must follow the structure outlined below to allow for easy
     9→parsing. Any element not specified below, be it formatting or textual, is likely
    10→to be ignored at best, or may cause an error when attempting to build the book.
    11→
    12→### Structure
    14→1. ***Title*** - While optional, it's common practice to begin with a title, generally <code
    15→   class="language-markdown"># Summary</code>. This is ignored by the parser however, and
    16→   can be omitted.
    17→   ```markdown
    18→   # Summary
    19→   ```
    20→
      →…
    93→### Example
    95→Below is the markdown source for the `SUMMARY.md` for this guide, with the resulting table
    96→of contents as rendered to the left.
    97→
    98→```markdown
    99→{{#include ../SUMMARY.md}}
   100→```

theme/README.md
     1→# Theme
     3→The default renderer uses a [handlebars](https://handlebarsjs.com) template to
     4→render your markdown files and comes with a default theme included in the mdBook
     5→binary.
     6→
     7→The theme is totally customizable, you can selectively replace every file from
     8→the theme by your own by adding a `theme` directory next to `src` folder in your
     9→project root. Create a new file with the name of the file you want to override
    10→and now that file will be used instead of the default file.
    11→
    12→Here are the files you can override:
    13→
    14→- **_index.hbs_** is the handlebars template.
      →…

theme/editor.md
     1→# Editor
     3→In addition to providing runnable code playgrounds, mdBook optionally allows them
     4→to be editable. In order to enable editable code blocks, the following needs to
     5→be added to the ***book.toml***:
     6→
     7→```toml
     8→[output.html.playground]
     9→editable = true
    10→```
    11→
    12→After enabling editable code blocks, the `editable` attribute must be added to a
    13→code block to make it editable:
    14→
    15→~~~markdown
    16→```rust,editable
    17→fn main() {
    18→    let number = 5;
    19→    print!("{}", number);
    20→}
    21→```
    22→~~~
    23→
      →…
    35→## Customizing the editor
    37→By default, the editor is the [Ace](https://ace.c9.io/) editor, but, if desired,
    38→the functionality may be overridden by providing a different folder:
    39→
    40→```toml
    41→[output.html.playground]
    42→editable = true
    43→editor = "/path/to/editor"
    44→```
    45→
      →…

theme/index-hbs.md
     1→# index.hbs
     3→`index.hbs` is the handlebars template that is used to render the book. The
     4→markdown files are processed to html and then injected in that template.
     5→
     6→If you want to change the layout or style of your book, chances are that you
     7→will have to modify this template a little bit. Here is what you need to know.
     8→
     9→## Data
    11→A lot of data is exposed to the handlebars template with the "context". In the
    12→handlebars template you can access this information by using
    13→
    14→```handlebars
    15→{{name_of_property}}
    16→```
    17→
    18→Here is a list of the properties that are exposed:
    19→
      →…
    41→## Handlebars helpers
    43→In addition to the properties you can access, there are some handlebars helpers
    44→at your disposal.
    45→
    46→### toc
    48→The toc helper is used like this
    49→
      →…
    80→### resource
    82→The path to a static file.
    83→It implicitly includes `path_to_root`,
      →…
    90→### fa
    92→mdBook includes a copy of [Font Awesome Free's](https://fontawesome.com)
    93→MIT-licensed SVG files. It accepts three positional arguments:
      →…

theme/syntax-highlighting.md
     1→# Syntax highlighting
     3→mdBook uses [Highlight.js](https://highlightjs.org) with a custom theme
     4→for syntax highlighting.
     5→
     6→Automatic language detection has been turned off, so you will probably want to
     7→specify the programming language you use like this:
     8→
     9→~~~markdown
    10→```rust
    11→fn main() {
    12→    // Some code
    13→}
    14→```
    15→~~~
    16→
    17→## Supported languages
    19→These languages are supported by default, but you can add more by supplying
    20→your own `highlight.js` file:
    21→
      →…
    68→## Custom theme
    69→Like the rest of the theme, the files used for syntax highlighting can be
    70→overridden with your own.
    71→
      →…
    82→## Improve default theme
    84→If you think the default theme doesn't look quite right for a specific language,
    85→or could be improved, feel free to [submit a new
    86→issue](https://github.com/rust-lang/mdBook/issues) explaining what you
      →…
