tests/snapshots/snapshots__budget_mdbook_guide_src_format_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (490 words)

README.md
     1→# Format
     3→In this section you will learn how to:
     4→
     5→- Structure your book correctly
     6→- Format your `SUMMARY.md` file
     7→- Configure your book using `book.toml`
     8→- Customize your theme

configuration/README.md
     1→# Configuration
     3→This section details the configuration options available in the ***book.toml***:
     4→- **[General]** configuration including the `book`, `rust`, `build` sections
     5→- **[Preprocessor]** configuration for default and custom book preprocessors
     6→- **[Renderer]** configuration for the HTML, Markdown and custom renderers
     7→- **[Environment Variable]** configuration for overriding configuration options in your environment
     8→
     9→[General]: general.md
    10→[Preprocessor]: preprocessors.md
    11→[Renderer]: renderers.md
    12→[Environment Variable]: environment-variables.md

configuration/environment-variables.md
     1→# Environment variables …

configuration/general.md
     1→# General configuration …
    31→## Supported configuration options …
    37→### General metadata …
    64→### Rust options …
    85→### Build options …

configuration/preprocessors.md
     1→# Configuring Preprocessors …
    26→## Custom preprocessor configuration …
    45→## Locking a preprocessor dependency to a renderer …
    55→## Provide your own command …
    67→### Optional preprocessors …
    79→## Require a certain order …

configuration/renderers.md
     1→# Configuring Renderers …
    20→## Output tables …
    59→### Custom backend commands …
    71→### Optional backends …
    84→## HTML renderer options …
   176→### `[output.html.print]` …
   191→### `[output.html.fold]` …
   206→### `[output.html.playground]` …
   230→### `[output.html.code]` …
   244→### `[output.html.search]` …
   286→#### `[output.html.search.chapter]` …
   300→### `[output.html.redirect]` …
   325→## Markdown renderer …

example.rs
     1→fn main() {
     2→    println!("Hello World!");
     3→#
      →…

markdown.md
     1→# Markdown …
     9→## Text and paragraphs …
    25→## Headings …
    39→### A heading …
    43→#### A smaller heading 
    45→More text.
    46→
    47→## Lists …
    69→## Links …
   108→## Images …
   127→## Extensions …
   131→### Strikethrough …
   146→### Footnotes …
   171→### Tables …
   191→### Task lists …
   208→### Smart punctuation …
   231→### Heading attributes …
   244→### Definition lists …
   279→### Admonitions …

mathjax.md
     1→# MathJax support …
    24→### Inline equations …
    32→### Block equations …

mdbook.md
     1→# mdBook-specific features …
     3→## Hiding code lines …
    74→## Rust playground …
   102→## Rust code block attributes …
   133→## Including files …
   154→## Including portions of a file …
   215→## Including a file but initially hiding all except specified lines …
   279→## Inserting runnable Rust files …
   310→## Controlling page \<title\> …
   319→## HTML classes provided by mdBook …
   323→### `class="left"` and `"right"` …
   331→### `class="hidden"` …
   341→## Font-Awesome icons …

summary.md
     1→# SUMMARY.md …
    12→### Structure …
    93→### Example …

theme/README.md
     1→# Theme
     3→The default renderer uses a [handlebars](https://handlebarsjs.com) template to
     4→render your markdown files and comes with a default theme included in the mdBook
     5→binary.
     6→
     7→The theme is totally customizable, you can selectively replace every file from
      →…

theme/editor.md
     1→# Editor
     3→In addition to providing runnable code playgrounds, mdBook optionally allows them
      →…
    35→## Customizing the editor …

theme/index-hbs.md
     1→# index.hbs
     3→`index.hbs` is the handlebars template that is used to render the book. The
      →…
     9→## Data …
    41→## Handlebars helpers …
    46→### toc …
    80→### resource …
    90→### fa …

theme/syntax-highlighting.md
     1→# Syntax highlighting
     3→mdBook uses [Highlight.js](https://highlightjs.org) with a custom theme
      →…
    17→## Supported languages …
    68→## Custom theme …
    82→## Improve default theme …
