tests/snapshots/snapshots__budget_mdbook_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 30 → level 0 (37 words)

404.md
README.md
SUMMARY.md
cli/README.md
cli/arg-watcher.md
cli/build.md
cli/clean.md
cli/completions.md
cli/init.md
cli/serve.md
cli/test.md
cli/watch.md
continuous-integration.md
for_developers/README.md
for_developers/backends.md
for_developers/mdbook-wordcount/src/main.rs
for_developers/preprocessors.md
format/README.md
format/configuration/README.md
format/configuration/environment-variables.md
format/configuration/general.md
format/configuration/preprocessors.md
format/configuration/renderers.md
format/example.rs
format/markdown.md
format/mathjax.md
format/mdbook.md
format/summary.md
format/theme/README.md
format/theme/editor.md
format/theme/index-hbs.md
format/theme/syntax-highlighting.md
guide/README.md
guide/creating.md
guide/installation.md
guide/reading.md
misc/contributors.md
